2355 [OneClick] added option to disable intermediate MKV files
2354 [MainForm] improved File\Open and drag & drop handling
2353 [MKV Muxer] fixed raw LC-AAC files detected as HW-AAC
                 fixed wrong default duration for interlaced AVC in some cases
2352 [Log] improved logging part II
2351 [Preset Exporter] fixed not exporting the AviSynth preset included in a OneClick preset. Bug #719
2350 [OneClick] fixed wrong stream order in some TS files. Bug #718
2349 [x264] fixed max values for --crf and --qp
2348 [x264] vbv enhancements
            - vbv values are shown in red if the values are too high or not limited
            - as too high values are also logged by x264 as a warning the MeGUI log warning has been removed
            - fixed not applying proper vbv values if only changing the AVC profile
2347 [Log] improved logging - console output is added to the log immediately
2346 [HD Streams Extractor] select audio/subtitle tracks without language tag by default
2345 [MP4 Muxer] revert r2299 (allow Nero & Apple Chapters styles muxing for better interoperability with players)
2344 [AVS Script Creator] + [OneClick] fixed memory leak when using autocrop. Bug #653
2343 [x264] fixed wrong detection of errors if file name contains "error"
2342 [OneClick] enhanced error handling

Changelog 2308 --> 2341

Features/Changes:
[x264] extended apple device profile support and removed/merged some others
[x264] added vbv restrictions based on the selected AVC level
[OneClick] improved muxing into intermediate MKV
[MKV Muxer] improved playback performance with some players (requires MkvMerge 5.9.0+)

Enhancements/Fixes:
[AVS Script Creator] fixed missing DAR values in the AVS script if using "Clever (TM) anamorphic encoding"
[File Indexer] enhanced index file selection behavior
[MKV Muxer] enhanced projected file size calculation if using intermediate MKV files
[OneClick] enhanced generation of demux file names